--- a/app/src/main/res/layout/activity_top_level.xml
+++ b/app/src/main/res/layout/activity_top_level.xml
@@ -10,6 +10,7 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:src="@drawable/logo"
+        android:layout_marginTop="20dp"
         android:contentDescription="@string/logo"/>
 
     <ListView
