activity_top_level changed

--- a/app/src/main/res/layout/activity_top_level.xml
+++ b/app/src/main/res/layout/activity_top_level.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".TopLevelActivity">
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:src="@drawable/logo"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
+        android:src="@drawable/logo"
         android:contentDescription="@string/logo"/>
 
     <ListView
